# bumaga

./: .gitignore  Cargo.toml  README.md
.readme/: example.avif
examples/macroquad-app/: Cargo.toml
examples/macroquad-app/src/: main.rs
examples/sdl2-app/: Cargo.toml  README.md
examples/sdl2-app/src/: main.rs
examples/shared/: index.html  partial.html  style.css  test.html  view.html
examples/skia-metal-winit-app/: Cargo.toml  README.md
examples/skia-metal-winit-app/src/: main.rs  metal.rs
js/: stub.js
src/: .gitignore  all.html  animation.rs  api.rs  component.rs  element.rs  error.rs  fonts.rs  html.rs  index.html  input.rs  lib.rs  math.rs  metrics.rs  models.rs  nw.rs  output.rs  query.rs  rendering.rs  state.rs  style.css  styles.rs  system.rs  testing.rs  tree.rs  update.rs  value.rs  view.rs  view_model.rs
src/browser/: img.rs  input.rs  mod.rs
src/controls/: button.rs  controller.rs  hover.rs  img.rs  input.rs  mod.rs  select.rs  slider.rs  text.rs
src/css/: css.pest  matching.rs  mod.rs  model.rs  reader.rs
src/html/: grammar.pest  html.pest  matching.rs  mod.rs  reader.rs  test.html
src/styles/: apply.rs  compute_animation_tracks.rs  compute_function.rs  compute_style.rs  default.rs  inherit.rs  initial.rs  mod.rs  scrolling.rs  stats.rs
tests/: test_something.rs
