[package]
name = "bumaga"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
ego-tree = "0.6.2"
lightningcss = { version = "1.0.0-alpha.57", default-features = false, features = ["grid", "into_owned"] }
taffy = "0.5.1"
serde = "1.0"
serde_json = "1.0.118"
log = "0.4"
selectors = "0.25"
html5ever = "0.26"
static-self = "0.1"
