[package]
name = "bumaga"
version = "0.1.0"
edition = "2021"

[dependencies]
lightningcss = { version = "1.0.0-alpha.57", default-features = false, features = ["grid", "into_owned"] }
parcel_selectors = "0.26"
taffy = "0.5.1"
serde = "1.0"
serde_json = "1.0.118"
log = "0.4"
static-self = "0.1"
pest = "2"
pest_derive = "2"