[package]
name = "skia-metal-winit-app"
version = "0.1.0"
edition = "2021"

[dependencies]
skia-safe = { version = "0.75", features = ["metal"] }
metal-rs = { package = "metal", version = "0.24.0" }
winit = "0.29.3"
raw-window-handle = { version = "0.6.0" }
objc = "0.2.7"
cocoa = "0.25.0"
core-graphics-types = "0.1.1"
foreign-types-shared = "0.1.1"
